# fps

./: .gitignore  .gitmodules
.github/workflows/: cmake.yml
CMakeCommon/: CommonMacros.txt  Untitled Diagram.drawio
code/: CMakeLists.txt  fps-gny  imgui.ini
code/src/: Aabb.cpp  Aabb.h  Application.cpp  Application.h  BoundingSphere.cpp  BoundingSphere.h  Camera.h  CameraController.h  DebugConsole.h  DebugUI.cpp  DebugUI.h  FreeCameraController.h  GraphicTypes.h  Handle.h  HandleManager.cpp  HandleManager.h  HandleResManager.cpp  HandleResManager.h  Input.h  MemoryManager.h  ModelResourceManager.cpp  ModelResourceManager.h  Plane.h  RenderBackend.cpp  RenderBackend.h  RenderCommand.h  RenderContext.cpp  RenderContext.h  RenderDevice.cpp  RenderDevice.h  Resources.cpp  Resources.h  ShaderManager.cpp  ShaderManager.h  StringHelper.cpp  StringHelper.h  SystemTypes.h  TextureManager.cpp  TextureManager.h  engine.cpp  (+13 more)
code/src/CommandBuffer/: CMakeLists.txt  CommandBuffer.h  CommandKeys.h  CommandPacket.h  GLCommands.cpp  GLCommands.h  LinearAllocator.h  MemoryUtil.h  RenderContext.h  command_debug.h  command_internal.h  config.h
code/src/cube_color/: main.cpp
code_workspace/: code_workspace.workspace  tags
code_workspace/.codelite/: code_workspace.session
doc/: render_sub_system.md  render_sub_system.txt.bak
